AKS/ingress/ingress-aplicationGatewayAGIC/AAG-AKS/Ingress/root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-root
  labels:
    name: service-root
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-root
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service1
  labels:
    name: service1
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    #appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/service1"
          backend:
            service:
              name: service1
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service2
  labels:
    name: service2
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    #appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/service2"
          backend:
            service:
              name: service2
              port: 
                number: 80
